--- a/index.html
+++ b/index.html
@@ -1,11 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
-</head>
-<body>
-    <h1>Hello, GitHub Pages!</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cyrus Luke Rea's Portfolio</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        background-color: #f4f4f4;
+      }
+
+      header {
+        background-color: #333;
+        color: white;
+        text-align: center;
+        padding: 1em;
+      }
+
+      section {
+        margin: 20px;
+      }
+
+      h2 {
+        color: #333;
+      }
+
+      ul {
+        list-style-type: none;
+        padding: 0;
+      }
+
+      li {
+        margin-bottom: 10px;
+      }
+
+      .project-container {
+        display: flex;
+        flex-wrap: wrap;
+      }
+
+      .project {
+        width: 48%;
+        margin: 1%;
+        background-color: white;
+        padding: 10px;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+    </style>
+  </head>
+
+  <body>
+    <header>
+      <h1>Cyrus Luke Rea</h1>
+      <p>Computer Science Student</p>
+    </header>
+
+    <section id="contact">
+      <h2>Contact Information</h2>
+      <ul>
+        <li>Email: clr261@txstate.edu</li>
+        <li>Phone: (210)-275-1967</li>
+        <li>Location: San Marcos, TX</li>
+      </ul>
+    </section>
+
+    <section id="education">
+      <h2>Education</h2>
+      <ul>
+        <li>
+          Computer Science, BS, Texas State University (Expected Spring 2025)
+        </li>
+        <li>Minor in Mathematics</li>
+      </ul>
+    </section>
+
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>Java, Kotlin, C++, Python, JavaScript</li>
+        <li>Mathematics: Calculus 3, Discrete Math, Differential Equations</li>
+        <li>Object-oriented principles and design patterns</li>
+        <li>Data structures and algorithms</li>
+        <li>MIPS32 Assembly Language</li>
+        <li>Strong written and verbal communication skills</li>
+      </ul>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+      <div class="project-container">
+        <div class="project">
+          <h3>2D Sort Visualizer</h3>
+          <p>
+            Displays common sorting algorithms visually using C++ and SFML
+            library.
+          </p>
+        </div>
+        <div class="project">
+          <h3>3D Physics Engine</h3>
+          <p>
+            Render different objects colliding into each other using OpenGL and
+            SFML.
+          </p>
+          <p>Ongoing project aimed at mastering vectors.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="experience">
+      <h2>Work Experience</h2>
+      <ul>
+        <li>
+          <strong>Vivint, Lubbock, Texas</strong>
+          <br />
+          Sales Representative (June 2022 - August 2022)
+          <ul>
+            <li>
+              Demonstrated exceptional interpersonal skills during door-to-door
+              sales engagements.
+            </li>
+            <li>Fostered and sustained customer relationships.</li>
+          </ul>
+        </li>
+        <li>
+          <strong>FedEx, Schertz, Texas</strong>
+          <br />
+          Package Handler (September 2021 - March 2022)
+          <ul>
+            <li>Loaded, unloaded, and operated package handling equipment.</li>
+            <li>Collaborated with others to sort and label packages.</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+
+    <section id="leadership">
+      <h2>Leadership</h2>
+      <ul>
+        <li>
+          <strong>IEEE Club</strong>
+          <ul>
+            <li>
+              Spearheaded initiatives within the Texas State IEEE chapter.
+            </li>
+            <li>Led a presentation on GitHub tutorial.</li>
+          </ul>
+        </li>
+        <li>
+          <strong>Texas State Rock Climbing Club</strong>
+          <ul>
+            <li>Organized and led climbing trips, ensuring safe practices.</li>
+            <li>Fostered communication between club members.</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+
+    <script>
+      // Simple JavaScript code can be added for additional interactivity.
+      // For example, you can add code to dynamically change content or interact with the user.
+      // This is optional and depends on your preference.
+    </script>
+  </body>
 </html>
