--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@
       <h2>Projects</h2>
       <div class="project-container">
         <div class="project">
-          <h3>2D Sort Visualizer</h3>
+          <h3>Sort Visualizer</h3>
           <p>
             Displays common sorting algorithms visually using C++ and SFML
             library.
           </p>
         </div>
         <div class="project">
-          <h3>3D Physics Engine</h3>
+          <h3>2D Physics Engine</h3>
           <p>
             Render different objects colliding into each other using OpenGL and
-            SFML.
+            SFML. <a href="https://github.com/LukeRea3/2dPhysicsEngine">Click Here to View!</a>
           </p>
           <p>Ongoing project aimed at mastering vectors.</p>
         </div>
